# fnf

./: Cargo.toml  README.md  TODO.md  fnf-config.js  fnf-reset-root.js  fnf.js
src/: main.rs
