[package]
name = "fnf"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = { version = "2.5.0", default-features = false }
anyhow = "1.0.102"
blake3 = { version = "1.8.5", default-features = false }
clap = { version = "4.6.1", default-features = false, features = ["derive", "help", "std"] }
salvo = { version = "0.93.0", default-features = false, features = ["affix-state", "server", "http1"] }
tokio = { version = "1.52.3", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing-subscriber = "0.3.23"
sha2 = { version = "0.11.0", default-features = false }
local-ip-address = { version = "0.6.13", default-features = false }
